--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,14 +4,6 @@
     { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
-    }
+    { "src": "/(.*)", "dest": "server.js" }
   ]
 }
